WebCore/svg/SVGAnimationElement.h
@@ -191,6 +191,10 @@ namespace WebCore {
             FloatPoint control1;
             FloatPoint control2;
         };
+        
+        double m_animationBegin;
+        double m_animationEnd;
+        
         Vector<KeySpline> m_keySplines;
     };
 
